--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -13,7 +13,7 @@ body {
   }
   
   .bg-steel {
-    background-color: #76F916;
+    background-color: #C0F897;
   }
   
   .site-header .navbar-nav .nav-link {
