--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -5,7 +5,7 @@ body {
   }
   
   h1, h2, h3, h4, h5, h6 {
-    color: #444444;
+    color: #000000;
   }
   
   ul {
@@ -22,6 +22,7 @@ body {
   
   .site-header .navbar-nav .nav-link:hover {
     color: #ffffff;
+    font-weight: bold;
   }
   
   .site-header .navbar-nav .nav-link.active {
