--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -18,6 +18,7 @@ body {
   
   .site-header .navbar-nav .nav-link {
     color: #cbd5db;
+    font-weight: bold;
   }
   
   .site-header .navbar-nav .nav-link:hover {
@@ -42,7 +43,7 @@ body {
   }
   
   a.article-title:hover {
-    color: #428bca;
+    color: #f50a0a;
     text-decoration: none;
   }
   
